# imgbook

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  paper-sizes.json
src/: args.cpp  args.hpp  main.cpp  natural_sort.hpp  paper_sizes.hpp
src/image/: cmyk_convert.cpp  cmyk_convert.hpp  jpeg_loader.cpp  jpeg_loader.hpp  preflight.cpp  preflight.hpp
src/layout/: bleed_layout.cpp  bleed_layout.hpp  layout.hpp  scaled_layout.cpp  scaled_layout.hpp
src/pdf/: book_writer.cpp  book_writer.hpp  hpdf_box_inject.c  hpdf_box_inject.h  page_builder.cpp  page_builder.hpp
